--- a/examples/example.am
+++ b/examples/example.am
@@ -1,6 +1,4 @@
 
-# This example is likely riddled with memory leaks
-
 # definition of matrix type
 type Matrix
 
@@ -88,6 +86,38 @@ type Matrix
         return result
     end
 
+    # operator to multiply matrices (standard matrix multiplication)
+    # returns a new matrix with heap allocation
+    op*(rhs:Matrix):Matrix
+
+        # if sizes don't match, do no allocation and return a matrix of size zero
+        if @size != rhs.size then
+            return new Matrix(0)
+        end
+
+        # sizes match, perform matrix multiplication
+        result:Matrix = new Matrix(@size)
+
+        i:int = 0
+        while i != @size do
+            j:int = 0
+            while j != @size do
+                # Calculate the dot product of row i of the left-hand matrix 
+                # and column j of the right-hand matrix
+                result.data[i][j] = 0  # Initialize the result entry to zero
+                k:int = 0
+                while k != @size do
+                    result.data[i][j] = result.data[i][j] + @data[i][k] * rhs.data[k][j]
+                    k = k + 1
+                end
+                j = j + 1
+            end
+            i = i + 1
+        end
+
+        return result
+    end
+
     # simple destructor to free a matrix's memory
     def @destroy()
         i:int = 0
@@ -113,7 +143,7 @@ def main():int
 
     $mat = mat.deepCopy()
 
-    matSum:Matrix = mat + $mat
+    matSum:Matrix = mat * $mat
     k:int = matSum.data[mat.size-1][mat.size-1]
 
     mat.destroy()
